@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r0p2
+  {
+    Modules = LHCbDIRAC:v9r0p2, LHCbWebDIRAC:v4r3p6
+    Depends = DIRAC:v6r19p7
+    LcgVer = v13r0
+  }
+
   v9r0p1
   {
     Modules = LHCbDIRAC:v9r0p1, LHCbWebDIRAC:v4r3p6
