@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v9r0p1",
+  "version": "v9r0p2",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r19p6",
+      [ "Dirac", "v6r19p7",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v13r0",
